--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -2,3 +2,23 @@
   Layout = "_Layout";
 }
 
+@using System.Collections.Generic;
+@model Bakery.Models.Flavor;  
+
+<h3>Mix and match any treats and flavors.</h3>
+<hr/>
+<div class="row">
+  <div class="col-5">
+      <h4 style="text-align: center">Treats!</h4>
+  <hr class="px-5">
+
+  </div>
+  <div class="col-2">
+
+  </div>
+  <div class="col-5">
+      <h4 style="text-align: center">Flavors!</h4>
+  <hr class="px-5">
+
+  </div>
+</div>
