--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -1,28 +1,34 @@
 @{
   Layout = "_Layout";
 }
-@using Bakery.Models.Flavor;
-@model Dictionary<string, object>;  
+@using Bakery.Models;
+@model FlavorTreatViewModel;  
 
 
-@* @model Bakery.Models.Flavor;   *@
+<h3 style="text-align: center">Mix and match any treats and flavors.</h3>
 
-<h3>Mix and match any treats and flavors.</h3>
 <hr/>
 <div class="row">
-  <div class="col-5">
+  <div class="col-4">
     <h4 style="text-align: center">Treats!</h4>
     <hr class="px-5">
- @foreach(object item in Model["flavors"]) {
-  <p>@item</p>
- }
+    @foreach(Treat item in Model.Treats)
+    {
+      <p>@item.Name</p>
+    }
   </div>
-  <div class="col-2">
-
+  <div class="col-4" align="center">
+<form action="/">
+  @Html.TextBox("searchString", "") 
+  <button class="btn  btn-default" style="color: Black">Search</button>
+</form>
   </div>
-  <div class="col-5">
+  <div class="col-4">
     <h4 style="text-align: center">Flavors!</h4>
     <hr class="px-5">
-
+    @foreach(Flavor item in Model.Flavors)
+    {
+      <p>@item.Name</p>
+    }
   </div>
 </div>
