--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -5,30 +5,38 @@
 @model FlavorTreatViewModel;  
 
 
-<h3 style="text-align: center">Mix and match any treats and flavors.</h3>
+<h3 style="text-align: center">Mix and match any treats and flavors</h3>
 
 <hr/>
 <div class="row">
   <div class="col-4">
     <h4 style="text-align: center">Treats!</h4>
     <hr class="px-5">
-    @foreach(Treat item in Model.Treats)
-    {
-      <p>@item.Name</p>
-    }
+    <ul>
+      @foreach(Treat item in Model.Treats)
+      {
+        <li>@item.Name</li>
+      }
+    </ul>
   </div>
-  <div class="col-4" align="center">
-<form action="/">
-  @Html.TextBox("searchString", "") 
-  <button class="btn  btn-default" style="color: Black">Search</button>
-</form>
+  <div class="col-4" align="">
+    <form action="/">
+      @Html.TextBox("searchString","")
+      <input type="submit" value="Search">
+      <input name="searchstring" type="reset" value="Clear" onclick="window.location.reload(true)">
+    </form>
+    <form action="/">
+      <button class="btn p-2 btn-default" style="color: Black">Clear</button>
+    </form>
   </div>
   <div class="col-4">
     <h4 style="text-align: center">Flavors!</h4>
     <hr class="px-5">
-    @foreach(Flavor item in Model.Flavors)
-    {
-      <p>@item.Name</p>
-    }
+    <ul>
+      @foreach(Flavor item in Model.Flavors)
+      {
+        <li>@item.Name</li>
+      }
+    </ul>
   </div>
 </div>
