--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -19,14 +19,10 @@
       }
     </ul>
   </div>
-  <div class="col-4" align="">
+  <div class="col-4" align="center">
     <form action="/">
-      @Html.TextBox("searchString","")
-      <input type="submit" value="Search">
-      <input name="searchstring" type="reset" value="Clear" onclick="window.location.reload(true)">
-    </form>
-    <form action="/">
-      <button class="btn p-2 btn-default" style="color: Black">Clear</button>
+      @Html.TextBox("searchString", "") 
+      <button class="btn p-2 btn-default" style="color: Black">Search</button>
     </form>
   </div>
   <div class="col-4">
