--- a/Bakery/Views/Treats/Details.cshtml
+++ b/Bakery/Views/Treats/Details.cshtml
@@ -20,11 +20,13 @@
       @using (Html.BeginForm("DeleteFlavor", "Treats"))
       {  
         @Html.Hidden("joinId", @join.FlavorTreatId);
-        <li>@join.Flavor.Name || <input type="submit" value="Delete" style="font-size:.6em; padding:.25em" class="btn btn-xs btn-dark"/></li>
+        <li>@Html.ActionLink(join.Flavor.Name, "Details", "Flavors", new { id = join.Flavor.FlavorId }) || <input type="submit" value="Delete" style="font-size:.6em; padding:.25em" class="btn btn-xs btn-dark"/></li>
       }
     }
   </ul> 
 }
+@if (User.Identity.IsAuthenticated)
+{
 <hr />
 <h5>Add flavor to this treat:</h5>
 
@@ -39,3 +41,4 @@
 }
 <p>@Html.ActionLink("Edit Treat", "Edit", new { id = Model.ThisTreat.TreatId })</p>
 <p>@Html.ActionLink("Delete Treat", "Delete", new { id = Model.ThisTreat.TreatId })</p>
+}
